# rust-gamedig

./: .actrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GAMES.md  LICENSE  LICENSE.md  MSRV.md  PROTOCOLS.md  README.md  RESPONSES.md  RESPONSES.tgn  SECURITY.md  SERVICES.md  VERSIONS.md  build.rs  games.toml  justfile
.devcontainer/: Dockerfile  README.md  compose.yaml  devcontainer.json
.github/: .act-event.json  dependabot.yml  labeler.yml
crates/cli/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
crates/cli/.cargo/: config.toml
crates/cli/changeset/: 0000_0_1_0.md  0001_0_1_1.md
crates/cli/src/: error.rs  key.rs  main.rs
crates/errorkind/: Cargo.toml
crates/errorkind/src/: lib.rs
crates/errorkind/tests/: integration.rs
crates/id-tests/: Cargo.toml
crates/id-tests/src/: lib.rs  main.rs  utils.rs
crates/lib/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/lib/examples/: fivem.rs  generic.rs  minecraft.rs  teamfortress2.rs  test.rs  test_eco.rs  valve_protocol_query.rs
crates/lib/src/: buffer.rs  capture.rs  config.rs  dict.rs  error.rs  http.rs  lib.rs  log.rs  prelude.rs  python.rs  query.rs  settings.rs  socket.rs  types.rs  utils.rs
crates/lib/src/adapters/: data.rs  mod.rs  player.rs  server.rs
crates/lib/src/capture/: mod.rs  packet.rs  pcap.rs  socket.rs  writer.rs
crates/lib/src/changelog/: mod.rs  v0_0_0.rs  v0_0_1.rs  v0_0_2.rs  v0_0_3.rs  v0_0_4.rs
crates/lib/src/converters/: data.rs  error.rs  mod.rs  player.rs  query.rs  server.rs  timeout.rs
crates/lib/src/core/: buffer.rs  check.rs  dns.rs  mod.rs  prelude.rs
crates/lib/src/core/error/: compile.rs  diagnostic.rs  mod.rs
crates/lib/src/core/http/: mod.rs
crates/lib/src/core/http/client/: mod.rs  std.rs  tokio.rs
crates/lib/src/core/io/: mod.rs
crates/lib/src/core/io/buf/: mod.rs  num.rs  string.rs
crates/lib/src/core/io/buffer/: mod.rs  num.rs  numeric.rs  string.rs
crates/lib/src/core/io/buffer/read/: mod.rs
crates/lib/src/core/io/dy_buf/: mod.rs  num.rs  string.rs
crates/lib/src/core/net/: mod.rs
crates/lib/src/core/net/http/: mod.rs  request.rs
crates/lib/src/core/net/http/sealed/: mod.rs
crates/lib/src/core/net/http/sealed/client/: mod.rs  reqwest.rs  std.rs  tokio.rs
crates/lib/src/core/net/https/: mod.rs  request.rs
crates/lib/src/core/net/https/sealed/: mod.rs
crates/lib/src/core/net/https/sealed/client/: mod.rs  std.rs  tokio.rs
crates/lib/src/core/net/tcp/: async_std.rs  mod.rs  stream.rs  sync_std.rs  tokio.rs
crates/lib/src/core/net/tcp/sealed/client/: async.rs  async_std.rs  mod.rs  std.rs  sync_std.rs  tokio.rs
crates/lib/src/core/net/udp/: mod.rs
crates/lib/src/core/net/udp/sealed/client/: mod.rs  std.rs  tokio.rs
crates/lib/src/core/tcp/: mod.rs
crates/lib/src/core/tcp/client/: mod.rs  std.rs  tokio.rs
crates/lib/src/core/udp/: mod.rs
crates/lib/src/core/udp/client/: mod.rs  std.rs  tokio.rs
crates/lib/src/error/: compile.rs  diagnostic.rs  mod.rs
crates/lib/src/errors/: kind.rs  result.rs
crates/lib/src/game/: mod.rs
crates/lib/src/game/ark_survival_ascended/: client.rs  error.rs  ext.rs  mod.rs  model.rs
crates/lib/src/games/: battalion1944.rs  definitions.rs  epic.rs  ffow.rs  gamespy.rs  jc2m.rs  minecraft.rs  mod.rs  quake.rs  query.rs  theship.rs  types.rs  unreal2.rs  valve.rs
crates/lib/src/games/eco/: mod.rs  protocol.rs  types.rs
crates/lib/src/games/ffow/: protocol.rs  types.rs
crates/lib/src/games/fivem/: mod.rs  protocol.rs  types.rs
crates/lib/src/games/jc2m/: mod.rs  protocol.rs  types.rs
crates/lib/src/games/mindustry/: mod.rs  protocol.rs  types.rs
crates/lib/src/games/minecraft/: mod.rs  types.rs
crates/lib/src/games/minecraft/protocol/: bedrock.rs  java.rs  legacy_v1_4.rs  legacy_v1_6.rs  legacy_vb1_8.rs  mod.rs
crates/lib/src/games/minetest/: mod.rs  protocol.rs  types.rs
crates/lib/src/games/palworld/: mod.rs  protocol.rs  types.rs
crates/lib/src/games/savage2/: mod.rs  protocol.rs  types.rs
crates/lib/src/games/theship/: mod.rs  protocol.rs  types.rs
crates/lib/src/protocol/: mod.rs
crates/lib/src/protocol/epic_api/: client.rs  error.rs  ext.rs  mod.rs  model.rs
crates/lib/src/protocol/query/: mod.rs
crates/lib/src/protocol/query/mumble/: mod.rs
crates/lib/src/protocol/query/valve/: client.rs  mod.rs  model.rs  packet.rs
crates/lib/src/protocol/query/valve/packet/: info.rs  mod.rs  payload.rs  player.rs  rules.rs
crates/lib/src/protocol/rcon/: mod.rs
crates/lib/src/protocol/rcon/valve_source/: packet.rs
crates/lib/src/protocol/valve_source/: client.rs  error.rs  ext.rs  mod.rs  model.rs
crates/lib/src/protocols/: mod.rs  types.rs
crates/lib/src/protocols/epic/: mod.rs  protocol.rs  types.rs
crates/lib/src/protocols/gamespy/: common.rs  mod.rs
crates/lib/src/protocols/gamespy/protocols/one/: mod.rs  protocol.rs  types.rs
crates/lib/src/protocols/gamespy/protocols/three/: protocol.rs  types.rs
crates/lib/src/protocols/gamespy/protocols/two/: protocol.rs  types.rs
crates/lib/src/protocols/minecraft/: mod.rs  types.rs
crates/lib/src/protocols/minecraft/protocol/: legacy_v1_3.rs  legacy_v1_4.rs  legacy_v1_5.rs  legacy_vb1_8.rs  mod.rs
crates/lib/src/protocols/quake/: client.rs  mod.rs  one.rs  three.rs  two.rs  types.rs
crates/lib/src/protocols/unreal2/: mod.rs  protocol.rs  types.rs
crates/lib/src/protocols/valve/: mod.rs  protocol.rs  types.rs
crates/lib/src/service/: mod.rs
crates/lib/src/services/: mod.rs
crates/lib/src/services/minetest_master_server/: mod.rs  service.rs  types.rs
crates/lib/src/services/valve_master_server/: service.rs  types.rs
crates/lib/src/settings/: mod.rs  timeout.rs
crates/lib/tests/: game_ids.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  wrap.rs
examples/: asrd.rs  csgo.rs  css.rs  dods.rs  generic.rs  generic_games.rs  gm.rs  hl2dm.rs  ins.rs  inss.rs  l4d.rs  l4d2.rs  master_querant.rs  minecraft.rs  teamfortress2.rs  tf2.rs  the_ship.rs  ts.rs  unreal2server.rs  valve_master_server_query.rs  (+1 more)
(+213 files in other folders)
