[workspace]
members = ["crates/cli", "crates/lib", "crates/id-tests"]

# Edition 2021, uses resolver = 2
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = 'fat'
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

# When building locally, use the local version of the library
# Comment this out when you want to resolve the library from crates.io
# This is only for crates that use gamedig as a dependency
# https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html
[patch.crates-io]
gamedig = { path = "./crates/lib" }