[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/ffi",
    "crates/ffi_neon",
    "crates/lib",
    "crates/macros",
    "crates/tools/id_gen",
    "crates/tools/net_replay",
]


# Default Release Profile
[profile.release]
opt-level     = 3
debug         = false
rpath         = true
lto           = 'fat'
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
