[package]
name          = "gamedig"
version       = "1.0.0-beta.1"
edition       = "2024"
license       = "MIT"
readme        = "README.md"
homepage      = "https://gamedig.github.io/"
repository    = "https://github.com/gamedig/rust-gamedig"
documentation = "https://docs.rs/gamedig/latest/gamedig"
authors       = ["GameDig Organization & Contributors [https://github.com/gamedig]"]
keywords      = ["game", "server", "protocol", "query", "status"]
description   = "A async capable library for querying game servers across multiple protocols."
categories    = ["asynchronous", "encoding", "network-programming", "parser-implementations", "parsing"]


[features]
default = ["default_client_tokio"]

# Internal Features (Prefix: _<CAPS>)
# DO NOT ENABLE THESE FEATURES DIRECTLY 
# UNLESS YOU KNOW WHAT YOU ARE DOING
_BUFFER              = []
_BUFFER_READ_LATIN_1 = ["dep:encoding_rs"]
_HTTP                = ["dep:serde", "dep:serde_json"]
_TCP                 = ["_BUFFER"]
_UDP                 = ["_BUFFER"]
_DEV_LOG             = ["attribute_log"]

# Default Features (Prefix: default_)
#
# Util features for users to enable all features with a runtime
# without having to specify each feature individually
#
# - Only 1 can be enabled at a time as it enables rt features
default_client_std   = ["all", "http_std", "socket_std"]
default_client_tokio = ["all", "http_tokio", "socket_tokio"]

# Socket Client (Prefix: socket_<RUNTIME>)
#
# A socket client is required to establish TCP/UDP connections
#
# - Only 1 socket client type can be enabled at a time
socket_std   = ["maybe-async/is_sync"]
socket_tokio = ["dep:async-trait", "dep:tokio"]

# HTTP Client (Prefix: http_<RUNTIME>)
#
# Does what it says on the tin, enables HTTP client support.
#
# TLS is provided by rustls so that there is no need for OpenSSL.
#
# - Only 1 HTTP client type can be enabled at a time.
# - If using socket client also insure to match the runtime.
http_std   = ["dep:ureq", "maybe-async/is_sync"]
http_tokio = ["dep:async-trait", "dep:reqwest", "dep:tokio"]

# Library Features
## Attributes (Prefix: attribute_)
attribute_log             = ["dep:log"]
attribute_dict            = ["attribute_converters", "dep:hashify"]
attribute_serde           = ["dep:serde"]
attribute_converters      = []
attribute_extended_derive = []

## Protocols (Prefix: protocol_)
protocol_epic_api     = ["_HTTP", "dep:base64", "dep:chrono"]
# WIP
_protocol_valve_source = ["_UDP", "dep:bzip2", "dep:crc32fast"]

## Games (Prefix: game_)
game_ark_survival_ascended = ["protocol_epic_api"]

## Index
all = ["all_attributes", "all_protocols", "all_games"]

all_attributes = [
    "attribute_log",
    "attribute_dict",
    "attribute_serde",
    "attribute_converters",
    "attribute_extended_derive",
]

all_protocols = ["protocol_epic_api"]

all_games = ["game_ark_survival_ascended"]


[dependencies]
# Dependencies
maybe-async = { version = "0.2.10", default-features = false }
thiserror   = { version = "2.0.18", default-features = false, features = ["std"] }
error-stack = { version = "0.6.0", default-features = false, features = ["backtrace", "spantrace", "std"] }

# Optional Dependencies
hashify     = { version = "0.2.7", optional = true }
bzip2       = { version = "0.6.1", optional = true }
tokio       = { version = "1.49.0", optional = true, default-features = false }
async-trait = { version = "0.1.89", optional = true, default-features = false }
crc32fast   = { version = "1.5.0", optional = true, default-features = false, features = ["std"] }
base64      = { version = "0.22.1", optional = true, default-features = false, features = ["std"] }
log         = { version = "0.4.29", optional = true, default-features = false, features = ["std"] }
serde_json  = { version = "1.0.149", optional = true, default-features = false, features = ["std"] }
encoding_rs = { version = "0.8.35", optional = true, default-features = false, features = ["alloc"] }
ureq        = { version = "3.1.4", optional = true, default-features = false, features = ["json", "rustls"] }
serde       = { version = "1.0.228", optional = true, default-features = false, features = ["derive", "std"] }
chrono      = { version = "0.4.43", optional = true, default-features = false, features = ["std", "clock", "serde"] }
reqwest     = { version = "0.13.1", optional = true, default-features = false, features = ["json", "rustls", "query", "form"] }
