[package]
name = "gamedig"
version = "0.8.0"
edition = "2021"
authors = [
    "rust-GameDig contributors [https://github.com/gamedig/rust-gamedig/contributors]",
    "node-GameDig contributors [https://github.com/gamedig/node-gamedig/contributors]",
]
license = "MIT"
description = "Query game servers and not only."
homepage = "https://gamedig.github.io/"
documentation = "https://docs.rs/gamedig/latest/gamedig/"
repository = "https://github.com/gamedig/rust-gamedig"
readme = "README.md"
keywords = ["server", "query", "game", "check", "status"]
rust-version = "1.82.0"
categories = ["parser-implementations", "parsing", "network-programming", "encoding"]

[features]
default = ["games", "services", "game_defs"]

# Enable query functions for specific games
games = []
# Enable game definitions for use with the generic query functions
game_defs = ["dep:phf", "games"]

# Enable service querying
services = []

# Enable serde derivations for our types
serde = []

# Enable clap derivations for our types
clap           = ["dep:clap"]
packet_capture = ["dep:pcap-file", "dep:pnet_packet", "dep:lazy_static"]

# Enable TLS for HTTP Client
tls = ["ureq/tls"]

[dependencies]
url         = "2.5.8"
byteorder   = "1.5.0"
bzip2-rs    = "0.1.2"
crc32fast   = "1.5.0"
base64      = "0.22.1"
encoding_rs = "0.8.35"
serde_json  = { version = "1.0.149" }
serde       = { version = "1.0.228", features = ["derive"] }
ureq        = { version = "2.12.1", default-features = false, features = ["gzip", "json"] }
phf         = { version = "0.13.1", optional = true, features = ["macros"] }
clap        = { version = "4.5.60", optional = true, features = ["derive"] }
pcap-file   = { version = "2.0.0", optional = true }
pnet_packet = { version = "0.35.0", optional = true }
lazy_static = { version = "1.5.0", optional = true }

[dev-dependencies]
gamedig-id-tests = { path = "../id-tests", default-features = false }

# Examples
[[example]]
name              = "minecraft"
required-features = ["games"]

[[example]]
name              = "teamfortress2"
required-features = ["games"]

[[example]]
name              = "valve_master_server_query"
required-features = ["services"]

[[example]]
name              = "test_eco"
required-features = ["games"]

[[example]]
name              = "generic"
required-features = ["games", "game_defs"]
